--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ body {
   height: 100%;
   bottom: 0;
   overflow: hidden;
-  box-shadow: inset 0 -60px 0 -30px #4bafac;
+  box-shadow: inset 0 -60px 0 -30px #3C65AE;
 }
 
 .skyscrappers__list {
@@ -71,7 +71,7 @@ body {
   height: inherit;
   bottom: 15%;
   width: 43.3333333333px;
-  background: linear-gradient(115deg, #4bafac 73%, #3c8b89 73%, #3c8b89 100%);
+  background: linear-gradient(115deg, #3C65AE 73%, #3c8b89 73%, #3c8b89 100%);
 }
 .skyscrappers__list .skyscrapper__item::after {
   content: "";
@@ -83,7 +83,7 @@ body {
   background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAAGCAYAAAAG5SQMAAAAFElEQVQImWP4////fwYYIJKDEwAAfPsP8eFXG40AAAAASUVORK5CYII=") space;
 }
 .skyscrappers__list .skyscrapper__item:last-child:not(:only-child) {
-  background: #4bafac;
+  background: #3C65AE;
 }
 .skyscrappers__list .skyscrapper-1 {
   width: 121.3333333333px;
@@ -190,7 +190,7 @@ body {
 }
 .crane__list .crane__item {
   position: absolute;
-  border: solid 1px #4bafac;
+  border: solid 1px #3C65AE;
   border-radius: 2px;
 }
 .crane__list .crane-cable {
@@ -198,7 +198,7 @@ body {
   height: 1px;
   border: none;
   outline: 1px solid transparent;
-  background: #4bafac;
+  background: #3C65AE;
   z-index: 0;
 }
 .crane__list .crane-cable-1 {
@@ -234,14 +234,14 @@ body {
   bottom: 0;
   left: -4500%;
   background: #90d0cd;
-  border: 1px solid #4bafac;
+  border: 1px solid #3C65AE;
 }
 .crane__list .crane-stand {
   width: 5%;
   height: 100%;
   right: 25%;
   z-index: 1;
-  background: linear-gradient(to top, #4bafac, #bfd4d3);
+  background: linear-gradient(to top, #3C65AE, #bfd4d3);
 }
 .crane__list .crane-weight {
   width: 8%;
@@ -357,7 +357,7 @@ body {
   position: relative;
   border-top: 0 solid transparent;
   border-right: 4px solid transparent;
-  border-bottom: 32px solid #4bafac;
+  border-bottom: 32px solid #3C65AE;
   border-left: 4px solid transparent;
 }
 .tree__leaves::after {
